# ffi-microbench

./: .gitignore  README.md  RESULTS.md  run_benchmarks.ps1
dotnet/FfiBench/: Callbacks.cs  FfiBench.csproj  Payloads.cs  Program.cs  Smoke.cs  Stress.cs
dotnet/FfiBench/Benchmarks/: Case01_NullCall.cs  Case02_Scalars.cs  Case03_ObjectMethod.cs  Case04_StringIn.cs  Case05_StringOut.cs  Case06_Bytes.cs  Case07_VecString.cs  Case08_VecRecord.cs  Case09_NestedRecord.cs  Case10_HashMap.cs  Case11_CallbackScalar.cs  Case12_CallbackString.cs  Case13_ErrorPath.cs  Case14_Concurrency.cs
rust/: Cargo.toml  build.rs  uniffi-span.toml  uniffi-stock.toml
rust/src/: api_csb.rs  api_raw.rs  api_uniffi.rs  lib.rs  types.rs
