[package]
name = "benchffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "benchffi"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
csbindgen = "1.9"

# Match the app workspace release profile (LTO, cgu=1) per
# docs/uniffi_migration_benchmarks.md "Metrics to record per case".
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
