[package]
name = "benchffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "benchffi"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
csbindgen = "1.9"

# Match the app workspace release profile (LTO, cgu=1) per
# docs/uniffi_migration_benchmarks.md "Metrics to record per case".
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# uniffi-rs fork: uniffi_macros emits the `_raw` span-sibling scaffolding exports
# consumed by the bindgen fork's high_performance_strings bindings (branch
# raw-scaffolding, single commit on the v0.31.2 tag; rev-pinned for reproducibility).
[patch.crates-io]
uniffi = { git = "https://github.com/yuyoyuppe/uniffi-rs", rev = "38ba77297cf0b0145a469ef4fc7ae13c78c17ecc" }
